<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MBOX TV</string>
    <string name="connecting">Свързване…</string>
    <string name="retrying">Изчакване на локалната телевизия…</string>
    <string name="settings_title">MBOX TV – Настройки</string>
    <string name="tv_url">TV адрес</string>
    <string name="choose_logo">Избери лого</string>
    <string name="reset_logo">Стандартно лого</string>
    <string name="autostart">Стартирай при включване на TV Box</string>
    <string name="save_start">ЗАПАЗИ И СТАРТИРАЙ</string>
    <string name="home_mode">НАПРАВИ MBOX TV НАЧАЛЕН ЕКРАН</string>
    <string name="pin_label">PIN за настройки</string>
    <string name="pin_prompt">Въведи PIN за настройки</string>
</resources>
